gcc/testsuite/rust/rustc/ui/parser/raw/raw-literal-self.rs
fn main() {
    let r#self: ();
// { dg-error "" "" { target *-*-* } .-1 }
}

